--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -9,21 +9,23 @@
   <body>
     <p><a href="index.html">Go back</a></p>
 
-    <form class="form">
-      <label>
-        First delay (ms)
-        <input type="number" name="delay" required />
-      </label>
-      <label>
-        Delay step (ms)
-        <input type="number" name="step" required />
-      </label>
-      <label>
-        Amount
-        <input type="number" name="amount" required />
-      </label>
-      <button type="submit">Create promises</button>
-    </form>
+    <div class="body">
+      <form class="form" id="createPromisesForm">
+        <label class="label">
+          First delay (ms)
+          <input type="number" name="delay" required class="input" />
+        </label>
+        <label class="label">
+          Delay step (ms)
+          <input type="number" name="step" required class="input" />
+        </label>
+        <label class="label">
+          Amount
+          <input type="number" name="amount" required class="input" />
+        </label>
+        <button type="submit" class="submit">Create promises</button>
+      </form>
+    </div>
 
     <script src="js/03-promises.js" type="module"></script>
   </body>
